body of the text

--- a/ms_outline.Rmd
+++ b/ms_outline.Rmd
@@ -4,6 +4,7 @@ author: "JA, CO, BH"
 output:
   html_document:
     toc: true
+    number_sections: true
     theme: "spacelab"
     highlight: "haddock" 
 ---
@@ -14,7 +15,7 @@ Understanding the differences in marine species range maps from IUCN and AquaMap
 
 
 ##Working Abstract  
-
+<!--
 * Importance of understanding spatial distribution of species
     * help identify hotspots for global biodiversity 
     * priorities for conservation
@@ -33,83 +34,93 @@ Understanding the differences in marine species range maps from IUCN and AquaMap
     * distribution data for 1900+ species found in both data sets
     * differences in predictions of species presence in both distribution and area
         * Aquamaps validation and benefits from _Ready et al. 2010_:
-          -  We present and evaluate AquaMaps, a presence-only species distribution modelling system that allows the incorporation of expert knowledge about habitat usage and was designed for maximum output of standardized species range maps at the global scale. In the marine environment there is a significant challenge to the production of range maps due to large biases in the amount and location of occurrence data for most species. AquaMaps is compared with traditional presence-only species distribution modelling methods to determine the quality of outputs under equivalently automated conditions.  _The effect of the inclusion of expert knowledge to AquaMaps is also investigated._ 
-          - Model outputs were tested internally, through data partitioning, and externally against independent survey data to determine the ability of models to predict presence versus absence. Models were also tested externally by assessing correlation with independent survey estimates of relative species abundance. AquaMaps outputs compare well to the existing methods tested, and inclusion of expert knowledge results in a general improvement in model outputs. The transparency, speed and adaptability of the AquaMaps system, as well as the existing online framework which allows expert review to compensate for sampling biases and thus improve model predictions are proposed as additional benefits for public and research use alike.
+          *  We present and evaluate AquaMaps, a presence-only species distribution modelling system that allows the incorporation of expert knowledge about habitat usage and was designed for maximum output of standardized species range maps at the global scale. In the marine environment there is a significant challenge to the production of range maps due to large biases in the amount and location of occurrence data for most species. AquaMaps is compared with traditional presence-only species distribution modelling methods to determine the quality of outputs under equivalently automated conditions.  _The effect of the inclusion of expert knowledge to AquaMaps is also investigated._ 
+          * Model outputs were tested internally, through data partitioning, and externally against independent survey data to determine the ability of models to predict presence versus absence. Models were also tested externally by assessing correlation with independent survey estimates of relative species abundance. AquaMaps outputs compare well to the existing methods tested, and inclusion of expert knowledge results in a general improvement in model outputs. The transparency, speed and adaptability of the AquaMaps system, as well as the existing online framework which allows expert review to compensate for sampling biases and thus improve model predictions are proposed as additional benefits for public and research use alike.
+-->
 
-* Implications
-    * some species need more attention?
-    * which data sets are more useful for which uses?
-        * who uses IUCN? who uses AquaMaps?  Who uses both?
-    * how can data decisions affect results of research or conservation efforts?
-        * using OHI as an example
+Species range maps are useful in conservation and management, as well as understanding the spatial distribution of movement and overlap of species in different habitats globally. Marine species prove more difficult to map based on their inherent nature of being difficult to observe and track. Two main sources for marine species are the IUCN and AquaMaps. These two datasets differ in methodology and final products, yet the differences between the two are not well documented _(though Aquamaps, and probably IUCN, each probably have some validation studies)_. AquaMaps uses a computer model based on preferential environmental parameters to predict species locations and probability of occurrence, while the IUCN uses expert insight to assign spatial boundaries around known locations of marine species. Approximately 1,900 species are found in both datasets and there are very large differences between these maps. Depending on data usage, choosing one of these datasets over the other can lead to potentially large differences in results as exemplified here by the Ocean Health Index as an example.
 
-Species range maps are useful in conservation and management, as well as understanding the spatial distribution of movement and overlap of species in different habitats globally. Marine species prove more difficult to map based on their inherent nature of being difficult to observe and track. Two main sources for marine species are the IUCN and AquaMaps. These two datasets differ in methodology and final products, yet the differences between the two are not well documented *(though Aquamaps, and probably IUCN, each probably have some validation studies)*. AquaMaps uses a computer model based on preferential environmental parameters to predict species locations and probability of occurrence, while the IUCN uses expert insight to assign spatial boundaries around known locations of marine species. Approximately 1,900 species are found in both datasets and there are very large differences between these maps. Depending on data usage, choosing one of these datasets over the other can lead to potentially large differences in results as exemplified here by the Ocean Health Index as an example.
-
-*** 
+----- 
 
 #Introduction
 
 There have been multiple efforts to map marine species based on both observational data and known life history and habitat preferences. AquaMaps and IUCN are two of these efforts.
 
-#Section One: Understanding each dataset separately  
-
-![](./figures/rangemap_chromis_alpha.png)
-
-**Figure 1:** Species range map for *Chromis alpha* from the AquaMaps (orange) and IUCN (purple) datasets.
-***Do we want to have this way up here?  needs explanation?***
+# Understanding each dataset separately  
 
 ###IUCN
 
 The IUCN publishes species distribution maps for as collections of shapefiles for a range of taxonomic groups.  Species spatial distributions are determined by experts based upon <known occurrence, suitable habitat, and blah>.  The IUCN presents these maps as 'limits of distibution' with the caveat that the species 'probably occurs within this polygon, but it does not mean that it is distributed equally within that polygon or occurs everywhere within that polygon'.<cite?>  IUCN only publishes spatial distribution map sets for taxonomic groups in which at least 90% of the species within the taxon group have been evaluated.  While this helps prevent sampling bias within taxa, it also means that entire taxonomic groups remain unavailable until they have met this threshold of comprehensive assessment.  As of December 2015, IUCN species distribution maps were available for XXX marine species (habitat = "marine" on IUCN species information pages).
 
-*something about format - polygons, fields, etc? presence/no presence*
-
-*presence field, and seasonality info*
-
-*terrestrial and marine both*
- 
-https://www.conservationtraining.org/course/view.php?id=217&lang=en
+* _something about format - polygons, fields, etc? presence/no presence_
+* _presence field, and seasonality info_
+* _terrestrial and marine both_
+* _use as a reference:_ https://www.conservationtraining.org/course/view.php?id=217&lang=en
 
 <!--
 Spatial designation of the species distribution is left to the experts with strict guidance for how to assign the designation. Using known occurrence data, experts depict the species distribution by polygons using a systematic methodology laid out by the [IUCN](http://www.amphibians.org/wp-content/uploads/2013/09/Red-List-Mapping-standards-ARLA-Jan2014-web-version.pdf) (this needs a better source). 
 
-**Data Type**  
+__Data Type__  
 Shapefiles for individual species. Spatial files include subpopulation information, presence (extinct/extant etc.) and seasonality information (breeding/migration/origin etc.).  
-- ***Include other columns typically within each shapefile***
+* ___Include other columns typically within each shapefile___
 
-**Methods**  
+__Methods__  
 From [IUCN site](http://www.iucnredlist.org/technical-documents/red-list-training/iucnspatialresources):  
-    - The species distribution maps, sometimes referred to as 'limits of distribution' or 'field guide' maps, aim to provide the current known distribution of the species within its native range. The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range. In most cases the range is depicted as polygons. *A polygon displaying the limits of a species distribution is essentially meant to communicate that the species probably occurs within this polygon, but it does not mean that it is distributed equally within that polygon or occurs everywhere within that polygon*.  
+    * The species distribution maps, sometimes referred to as 'limits of distribution' or 'field guide' maps, aim to provide the current known distribution of the species within its native range. The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range. In most cases the range is depicted as polygons. _A polygon displaying the limits of a species distribution is essentially meant to communicate that the species probably occurs within this polygon, but it does not mean that it is distributed equally within that polygon or occurs everywhere within that polygon_.  
 
-- ***Spatial files for IUCN species groups attempt to include a broad sample across the group, to avoid sampling bias (maybe?)*** - but only some species groups have had spatial data released, so some taxa are not represented at all 
-    - from http://www.iucnredlist.org/technical-documents/spatial-data: *"This spatial data provided below is for comprehensively assessed taxonomic groups."  "... the data is divided by taxonomic groups.  Groups that have been comprehensively assessed are those containing >90% species evaluated within the described taxon group."*
+* ___Spatial files for IUCN species groups attempt to include a broad sample across the group, to avoid sampling bias (maybe?)___ - but only some species groups have had spatial data released, so some taxa are not represented at all 
+    * from http://www.iucnredlist.org/technical-documents/spatial-data: _"This spatial data provided below is for comprehensively assessed taxonomic groups."  "... the data is divided by taxonomic groups.  Groups that have been comprehensively assessed are those containing >90% species evaluated within the described taxon group."_
     -->
 
-###AquaMaps 
+### AquaMaps 
 
 [Site](http://www.aquamaps.org/)
 
-AquaMaps (Kaschner et al. 2013) offers species range maps based on modeled relative environmental suitability.  For each assessed species, data from observations and expert knowledge are used to generate bioclimatic envelopes for sea surface temperature, salinity, depth, productivity, and where applicable, sea ice cover and/or distance to land.  The species' suite of bioclimatic envelopes is compared to a map of environmental attributes on a 0.5 degree global grid, creating a global map of ***probability of occurrence*** (or ***relative environmental suitability?*** (see Kaschner et al 2006 and 2011)), with cell values ranging from 0 (unsuitable) to 1.00 (highly suitable).  These maps can then be tweaked by experts altering the parameters and regenerating the modeled map. As of December 2015, ***22,000*** species have been mapped. ***Expert mode to further refine models?*** See (Kaschner et al. 2013) for more detailed methods.
+AquaMaps (Kaschner et al. 2013) offers species range maps based on modeled relative environmental suitability.  For each assessed species, data from observations and expert knowledge are used to generate bioclimatic envelopes for sea surface temperature, salinity, depth, productivity, and where applicable, sea ice cover and/or distance to land.  The species' suite of bioclimatic envelopes is compared to a map of environmental attributes on a 0.5 degree global grid, creating a global map of ___probability of occurrence___ (or ___relative environmental suitability?___ (see Kaschner et al 2006 and 2011)), with cell values ranging from 0 (unsuitable) to 1.00 (highly suitable).  These maps can then be tweaked by experts altering the parameters and regenerating the modeled map. As of December 2015, ___22,000___ species have been mapped. ___Expert mode to further refine models?___ See (Kaschner et al. 2013) for more detailed methods.
 
-- ***how is expert insight used? how frequently? new data set includes "reviewed" field*** expert insight seems to be used to generate the environmental suitability envelope for species, to provide sightings info that use used in training the model, and to exclude species from regions of known absence; but the model generates the maps. However, some species maps are reviewed by experts (approved? changed? what happens in the review)
+* ___how is expert insight used? how frequently? new data set includes "reviewed" field___ expert insight seems to be used to generate the environmental suitability envelope for species, to provide sightings info that use used in training the model, and to exclude species from regions of known absence; but the model generates the maps. However, some species maps are reviewed by experts (approved? changed? what happens in the review)
 
 ### Comparison between AM and IUCN
 
-- Problem of expert-defined range maps (over-predicting) vs sightings (under-predicting): 
-from **Kaschner et al 2011**:  *Similar to the trade-offs of different habitat prediction modeling approaches [11], these two methods lie on ___opposite ends of a spectrum from potentially overpredicting expert-derived (range maps) to potentially underpredicting (empirical sighting surveys) range sizes___*
-- are there other sources (non-IUCN and AM sources) that can back this up?
+* Differences in intent: capture all observations and be inclusive as possible, vs model suitable habitats
+* Differences in methodology - expert-defined range maps (over-predicting) vs sightings (under-predicting) vs models: 
+from __Kaschner et al 2011__:  _Similar to the trade-offs of different habitat prediction modeling approaches [11], these two methods lie on ___opposite ends of a spectrum from potentially overpredicting expert-derived (range maps) to potentially underpredicting (empirical sighting surveys) range sizes____
+    * are there other sources (non-IUCN and AM sources) that can back this up?
+* Differences in the interpretation: probability/RES, vs. presence "probably within this polygon, but not everywhere within" - apples to oranges.
 
-### Spatial resolution - not sure we need this, it is not really *resolution* but more about nuances of distribution... difference already explained above?
+<!--
+### Spatial resolution - not sure we need this, it is not really _resolution_ but more about nuances of distribution... difference already explained above?
 
 These two differ in spatial resolution - AquaMaps provides higher resolution information about where species do and do not occur globally whereas the IUCN range maps are unable to provide specific information about where within a polygon a species occurs.
+-->
 
-### Poor overlap between assessed species
+#### Poor overlap between assessed species
 
-***  
+___number of species in each data set, and the number that overlap___ 
 
-# Section Two: In what ways do the two data sets differ
+* this highlights that each provides valuable and unduplicated spatial range information.
 
-### Defining alignment between the two data sets
+#### Summarize this section?
+
+Researchers have two large and useful data sets at their disposal, each with its own utility.  Being able to use both simultaneously makes many more species available, but here there be challenges.
+
+-----  
+
+# In what ways do the two data sets differ
+
+<!--
+![](./figures/rangemap_chromis_alpha.png)
+
+__Figure 1:__ Species range map for _Chromis alpha_ from the AquaMaps (orange) and IUCN (purple) datasets.
+___is this the right map to use here? find a good one with cool differences___
+-->
+
+### Defining and comparing spatial alignment between the two data sets
+
+___Main messages:___
+
+* Definition of "alignment" in two dimensions, incl "good" vs "poor"
+* basic methodology (raster, overlay, calculate)? or should there be a separate methodology section?
 
 <!--
 * Here we can discuss the idea of multiple "dimensions" of alignment - distributional and area alignment.  Well-aligned species will show high alignment in both dimensions.  
@@ -128,70 +139,112 @@ To facilitate our analysis, we selected the subset of marine species that have r
 
 Overlaying distribution maps from the two data sets for a given species, we calculated two dimensions of spatial alignment: distribution match, which we defined as the ratio of the smaller range that overlapped with the larger range; and area match, which we defined as the ratio of the smaller range to the larger range.
 
-$$Match_{dist} = \frac{A_{overlap}}{A_{larger} * 100%$$
+$$Match_{dist} = \frac{A_{overlap}}{A_{larger}} * 100\%$$
 
-$$Match_{area} = \frac{A_{smaller}}{A_{larger} * 100%$$
+$$Match_{area} = \frac{A_{smaller}}{A_{larger}} * 100\%$$
 
-For a species with well-matched distribution maps between the two data sets, we would expect to see a value near 100% for each dimension, indicating near-total inclusion of the smaller range within the larger (distribution alignment) and very similar extent of range (area alignment).
+
+For a species whose distribution is well understood, and whose range is described in both data sets, we would expect to see a value near 100% for each dimension of alignment, indicating near-total inclusion of the smaller range within the larger (distribution alignment) and very similar extent of range (area alignment).
 
 <!--
 ### Determining "presence" for each data set
 
-To compare these two datasets for all species found in each (n = ***1920***?), we rasterized the IUCN polygons to the same cell resolution as AquaMaps: 0.5 degrees in both latitude and longitude. For every grid cell where the polygon overlapped ***the center point? or is it based on ANY overlap, e.g. using weights and including any non-zero weight?  This could boost IUCN presence***, a value of 1 was assigned. For the purposes of comparison, the probability of occurrence values in the AquaMaps data were ignored and all cells where there was a value greater than 0 were assigned a 1. This way we have comparable maps for total species range. 
-- ***How do we justify a zero-threshold here?*** 
-    - need to understand the "probability" - is it really ***relative environmental suitability***   From Kaschner et al 2011: "Patterns based on a presence threshold RES.0.6 (Fig. 1) were most strongly supported by empirical species richness data (see ‘Validation of species richness’, below)."
+To compare these two datasets for all species found in each (n = ___1920___?), we rasterized the IUCN polygons to the same cell resolution as AquaMaps: 0.5 degrees in both latitude and longitude. For every grid cell where the polygon overlapped ___the center point? or is it based on ANY overlap, e.g. using weights and including any non-zero weight?  This could boost IUCN presence___, a value of 1 was assigned. For the purposes of comparison, the probability of occurrence values in the AquaMaps data were ignored and all cells where there was a value greater than 0 were assigned a 1. This way we have comparable maps for total species range. 
+- ___How do we justify a zero-threshold here?___ 
+    - need to understand the "probability" - is it really ___relative environmental suitability___   From Kaschner et al 2011: "Patterns based on a presence threshold RES.0.6 (Fig. 1) were most strongly supported by empirical species richness data (see ‘Validation of species richness’, below)."
     - since IUCN "presence" seems to be pretty loose, set a wide tolerance on AM?
 -->
 
-### Differences in global distribution between data sets
+___Main messages:___
 
-Using predifined species groups by the IUCN, it is clear to see that tropical species - specifically wrasses, corals, blennies and groupers, make up the majority of species found in both. This is driven more by the IUCN dataset since the number of species with spatial data is directly attributed to the species that have assessments.
+* breaking down alignment differences by quadrant provides useful information.
+    * q1 = well-matched (well understood? not necessarily, could be luck or over-generous environmental envelopes)
+    * other quadrants have defining characteristics that can highlight areas where we should look for better data and better understanding
 
-![](figures/sp_groups_barchart.png)
+<!--
+Figure 1 shows four representative species: Kajikia Albida, with a high degree of alignment in both area and distribution; Galaxea cryptoramosa, well-matched in spatial alignment but poorly matched in areal alignment; Conus magnificus, well-matched in area but poorly matched in distribution; and Acanthurus nigrosis, poorly matched in both area and distribution. 
 
-***Total species occurrences for each data set: all AM, all IUCN, and overlap (one? the other? occurrences of both?)***
+![](figures/four_maps.png)
 
-![](figures/all_aquamaps_map.png)
+___Figure 1: Representative species with distribution mapped in both AquaMaps and IUCN data sets.___  
+-->
 
-***Relevance of this*** - unequal distribution of assessed species - strengths and weaknesses of each; benefits of using both maybe?
-
-### Comparing alignment 
-
-#### Comparing alignment by species
-
-For each species range map, the total area was calculated for all cells that were included in either species distributions, regardless of source. The number of cells that were found in both *** <- this implies area may just be cell count?***
-
-Figure 1 is an example of very large differences in a species range map from the IUCN and AquaMaps datasets. By considering the entire range of the species to be every cell that is in either dataset, only 3.14% of the map is in both. 3.18% is covered just by AquaMaps and 77.3% is covered just by IUCN. Figure 2
-***focus on the percent overlap of small within large*** - describe this species in terms of alignment
-
-*** Is the area calculated based on cell area, or just number of cells? ***
+For each of the ___2200___ species whose range is described by both data sets, we calculated the distribution match and the area ratio, and plotted the ___2200___ species map pairs on a scatter plot of distribution alignment vs area alignment (Figure 1). 
 
 ![](figures/AreaRatiovsPercOverlap.png)
 
-***Walk through the quadrant plot*** - describe meaning of each axis and each quadrant
+___Figure 1: Distribution alignment vs area alignment for ___2200___ species mapped in both Aquamaps and IUCN species distribution maps.___
 
-#### Comparing alignment by species group
+We divided the plot into quadrants based on the median values for each axis to differentiate between four different qualities of alignment:
+
+| Description              |     Distribution match    |    Area match     |
+| :----------------------: | :-----------------------: | :---------------: |
+| q1: Well-aligned         | Distribution match > XX % | Area match > YY % |
+| q2: Distribution-aligned | Distribution match < XX % | Area match > YY % |
+| q3: Area-aligned         | Distribution match > XX % | Area match < YY % |
+| q4: Poorly-aligned       | Distribution match < XX % | Area match < YY % |
+
+Clearly the upper right quadrant (quadrant 1) is the place to be.  Species in this quadrant generally agree in spatial distribution between the two distribution maps, and the area of described ranges will be similar; expert-drawn range map and bioclimatic envelope model produce similar predictions of species distribution. (n = XXX; YYY %)
+
+The other quadrants each suggest a different story.  Species map pairs that fall within the upper left quadrant (quadrant 2: well-matched in distribution but poorly-matched in area) indicate species in which the range of the smaller map falls generally within the larger map, but the larger map may include more generous buffers or may include areas unrepresented in the smaller map. (n = XXX; YYY %)
+
+The lower right quadrant (quadrant 3: well-matched in area but poorly matched in distribution) includes species for which the two maps generally agree in range area, but disagree in where those ranges occur.  General disagreement in distribution seems to indicate a greater issue than general disagreement in area extent, so we categorized map pairs in this quadrant as being more problematic than map pairs in either of the upper quadrants. (n = XXX; YYY %)
+
+The lower left quadrant (quadrant 4: poorly matched in both dimensions) indicates species for which the map pairs fail to agree in both area and distribution. (n = XXX; YYY %)
+
+<!--
+(Looking at some representative species maps)
+The range described by AquaMaps map covers XXX km^2^; the range described by IUCN map covers YYY km^2^; the overlap between the two maps covers ZZZ km^2^.  Distribution match = ZZZ km^2^ / XXX km^2^; area match = XXX km^2^ / YYY km^2^.
+
+* Single species map: ___Do we want this as a separate figure?___ _it helps to explain what the hell we're talking about; but we could also just jump to the quadrant map?_ 
+* ___OR: plot four representative maps FIRST, to show differences in the two dimensions of alignment, THEN show the quadrant map with those species indicated.___ 
+    * _This is backwards from how we did the analysis, but I think might flow better for the reader._
+-->
 
 ![](figures/barchart_spp_gp_quads.png)
 
-Which species groups are better aligned?  (save discussion until later?)
+Figure 2 breaks the ___2200___ species map pairs into taxonomic groups as classified by the published IUCN range maps.  We were not surprised to find that map pairs for marine mammals, tunas, and billfishes were well-matched (quadrants 1 and 2); many of these species are global-ranging pelagic organisms, with some ranges encompassing nearly the entire ocean.  Mangroves are also not a surprise, being immobile and easily mapped by remote sensing methods.
+
+_Map pairs for corals, most of which fall into quadrant 2, ***hypothesis...*** generally agree well in distribution, but in many cases IUCN ranges include buffers that extend much farther from coastlines than AquaMaps modeled ranges, which use seafloor depth as a limiting factor._
+
+___Other hypotheses/case studies to explain mechanistic differences?___
+
+-----
+
+### Differences in global distribution between data sets
+
+___main messages:___ 
+
+* IUCN seems to be weighted toward tropics; AM might be more evenly distributed?
+* This difference in distribution might come into play when selecting a data set for a more regionally-focused study
+* ... or for global studies, it might be desirable to use both data sets to get better global distribution?
+* Small number of overlapping species indicates that each offers data on distinct spp
+* This section is really supporting the idea that it is critical to understanding the differences, as both data sets support one another
+
+Using predifined species groups by the IUCN, it is clear to see that tropical species - specifically wrasses, corals, blennies and groupers, make up the majority of species found in both. This is driven more by the IUCN dataset since the number of species with spatial data is directly attributed to the species that have assessments. ___This could be shown using the n = XXX on the species group quadrant breakdown chart too.___
+
+_Total species occurrences for each data set: all AM, all IUCN, and overlap (one? the other? occurrences of both?)_
+
+![](figures/all_aquamaps_map.png)
+
+_Relevance of this_ - unequal distribution of assessed species - strengths and weaknesses of each; benefits of using both maybe?  save for discussion
 
 ### Effect of changing threshold on area representation
 
 ![](figures/AMThreshold.png)
 
-***Where does the 40% threshold come from?  Is it commonly used?  Justification?*** Show effect of using a 40% threshold vs a 0% threshold.
+___Where does the 40% threshold come from?  Is it commonly used?  Justification?___ Show effect of using a 40% threshold vs a 0% threshold.
 
 ![](figures/scatter_AMThreshold.png)
 Effect of selecting different thresholds on total "present" area - linearish, no big steps or drops to indicate sudden change in tradeoff.
 
 
 
-***  
+-----  
 
-##Section Three: 
+# Methodology? discussion?
 
-# Section Four: Implications
+# Implications
 
 ## Application to OHI
 
@@ -210,28 +263,28 @@ Between the two databases, there are 1,923 species that have a range map in both
 Scenario 1 shows change in score if IUCN maps were still preferentially used over AquaMaps, but the AquaMaps threshold was set to 1% rather than 40% probability of occurrence. Scenario 2 shows the change in score if we switched preferences for AquaMaps over IUCN data while keeping the 40% probability of occurrence threshold. The final Scenario is the same as scenario 2 but without a probability of occurrence threshold.
 
 
-It is important to remember that although only ***[X (1,923/total number of species)]%*** of all species included in the species goal are found in both datasets, there are still significant differences when electing to choose one dataset over the other.
+It is important to remember that although only ___[X (1,923/total number of species)]%___ of all species included in the species goal are found in both datasets, there are still significant differences when electing to choose one dataset over the other.
 
-***  
+-----  
 
-##Section Four: Implications of data choices
+## Application to MPA Gap Analysis
 
-***need more info on these options? they both sound interesting though***
+___need more info on these options? they both sound interesting though___
 - could talk about MPA gap analysis
-- Highlight studies that have used one and not the other. Could this have changed the results?
 
+# Conclusion
 
-***  
+-----  
 
-##References
+#References
 
-**Key AquaMaps publications:**
+__Key AquaMaps publications:__
 
 Kaschner, K., D.P. Tittensor, J. Ready, T Gerrodette and B. Worm (2011). Current and Future Patterns of Global Marine Mammal Biodiversity. PLoS ONE 6(5): e19653. PDF
 
 Ready, J., K. Kaschner, A.B. South, P.D Eastwood, T. Rees, J. Rius, E. Agbayani, S. Kullander and R. Froese (2010). Predicting the distributions of marine organisms at the global scale. Ecological Modelling 221(3): 467-478. PDF
 
-**Papers based on AquaMaps:** ***Use these for section 4?***
+__Papers based on AquaMaps:__ ___Use these for section 4?___
 
 Jones, M.C., S.R. Dyeb, J.K. Pinnegar and W.W.L. Cheung (2012). Modelling commercial fish distributions: Prediction and assessment using different approaches. Ecological Modelling 225(2012): 133-145. PDF
 
